--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+/*
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic,700italic|Skranji:400,700);
+*/
+
 @font-face {
   font-family: 'Century Schoolbook Monospace';
   src: url('../fonts/Century-Schoolbook-Monospace-BT.eot');
@@ -9,7 +13,7 @@
 @font-face {
   font-family: 'Skranji';
   src: url('../fonts/Skranji-Bold.eot');
-  src: local('☺'), url('../fonts/Skranji-Bold.woff') format('woff'), url('../fonts/Skranji-Bold.ttf') format('truetype'), url('../fonts/Skranji-Bold.svg') format('svg');
+  src: url('../fonts/Skranji-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Skranji-Bold.woff') format('woff'), url('../fonts/Skranji-Bold.ttf') format('truetype'), url('../fonts/Skranji-Bold.svg#CenturySchoolbookMonospaceBT') format('svg');
   font-weight: bold;
   font-style: normal;
 }
@@ -17,7 +21,7 @@
 @font-face {
   font-family: 'Skranji';
   src: url('../fonts/Skranji-Regular.eot');
-  src: local('☺'), url('../fonts/Skranji-Regular.woff') format('woff'), url('../fonts/Skranji-Regular.ttf') format('truetype'), url('../fonts/Skranji-Regular.svg') format('svg');
+  src: url('../fonts/Skranji-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Skranji-Regular.woff') format('woff'), url('../fonts/Skranji-Regular.ttf') format('truetype'), url('../fonts/Skranji-Regular.svg#CenturySchoolbookMonospaceBT') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,7 +29,7 @@
 @font-face {
   font-family: 'Ubuntu';
   src: url('../fonts/Ubuntu-Bold.eot');
-  src: local('☺'), url('../fonts/Ubuntu-Bold.woff') format('woff'), url('../fonts/Ubuntu-Bold.ttf') format('truetype'), url('../fonts/Ubuntu-Bold.svg') format('svg');
+  src: url('../fonts/Ubuntu-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Ubuntu-Bold.woff') format('woff'), url('../fonts/Ubuntu-Bold.ttf') format('truetype'), url('../fonts/Ubuntu-Bold.svg#CenturySchoolbookMonospaceBT') format('svg');
   font-weight: bold;
   font-style: normal;
 }
@@ -33,7 +37,7 @@
 @font-face {
   font-family: 'Ubuntu';
   src: url('../fonts/Ubuntu-Regular.eot');
-  src: local('☺'), url('../fonts/Ubuntu-Regular.woff') format('woff'), url('../fonts/Ubuntu-Regular.ttf') format('truetype'), url('../fonts/Ubuntu-Regular.svg') format('svg');
+  src: url('../fonts/Ubuntu-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Ubuntu-Regular.woff') format('woff'), url('../fonts/Ubuntu-Regular.ttf') format('truetype'), url('../fonts/Ubuntu-Regular.svg#CenturySchoolbookMonospaceBT') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -45,7 +49,7 @@
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-size: auto 100%;
-  font-family: 'Skranji';
+  font-family: 'Skranji', 'Skranji', sans-serif !important;
   font-size: 15px;
 }
 
@@ -200,7 +204,7 @@ body, section.bespoke-slide {
 
 .rv h1, .rv h2, .rv h3, .rv h4 {
   color: #33342d;
-  font-family: "Skranji";
+  font-family: 'Skranji', 'Skranji', sans-serif !important;
   top: auto;
   position: static;
   margin: 10px;
@@ -254,7 +258,7 @@ body, section.bespoke-slide {
 }
 
 .highlight pre, pre, code {
-  font-family: 'Century Schoolbook Monospace', monospace;
+  font-family: 'Century Schoolbook Monospace', monospace !important;
   white-space: nowrap;
   padding: 0px 5px;
   border: 1px solid rgba(255, 255, 255, 0.33);
@@ -290,7 +294,7 @@ table {
   min-height: 25px;
 }
 .ecosystem {
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', 'Ubuntu' !important;
   font-size: 11.5px;
   text-shadow: 0px 0px 4px white;
   margin-left: 8px;
